--- a/tasks/deploy_for_ubuntu.yml
+++ b/tasks/deploy_for_ubuntu.yml
@@ -15,3 +15,9 @@
     - name: update
       apt: update_cache=yes
       become: yes
+
+    - name: install_bitcoind
+      apt:
+        name: bitcoind
+        update_cache: yes
+      become: yes
