--- a/tasks/switch_ver.yml
+++ b/tasks/switch_ver.yml
@@ -4,6 +4,8 @@
       prompt: 'please tag name'
 
   tasks:
+    - name: daemon_stop
+      shell: bitcoin-cli stop
 
     - name: remove_old_file
       file:
