--- a/tasks/update.yml
+++ b/tasks/update.yml
@@ -4,7 +4,7 @@
       local_action:
         module: slack
         domain: yamalabosotsuken2017.slack.com
-        token: T7Z9VQQU9/B91ET4USH/RRweKjVUnxdiVWZFiBCqnCad
+        token: XXXX
         msg: 'start update'
         link_names: 1
 
@@ -44,6 +44,6 @@
       local_action:
         module: slack
         domain: yamalabosotsuken2017.slack.com
-        token: T7Z9VQQU9/B91ET4USH/RRweKjVUnxdiVWZFiBCqnCad
-        msg: 'completed'
+        token: XXXX
+        msg: 'end'
         link_names: 1
