shell結果スルー機能の実装 fix #39

--- a/tasks/reboot.yml
+++ b/tasks/reboot.yml
@@ -2,6 +2,7 @@
   tasks:
     - name: daemon_stop
       shell: bitcoin-cli stop
+      ignore_errors: True
 
     - name: update
       apt: update_cache=yes
